Bug 74187 - `mc-tool auto-presence` crashes
Summary: `mc-tool auto-presence` crashes
Status: RESOLVED FIXED
Alias: None
Product: Telepathy
Classification: Unclassified
Component: mission-control (show other bugs)
Version: git master
Hardware: Other All
: medium normal
Assignee: Telepathy bugs list
QA Contact: Telepathy bugs list
URL:
Whiteboard:
Keywords: patch
Depends on:
Blocks:
 
Reported: 2014-01-29 14:27 UTC by Simon McVittie
Modified: 2014-01-29 19:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
mc-tool: fix setting automatic presence (936 bytes, patch)
2014-01-29 14:27 UTC, Simon McVittie
Details | Splinter Review

Description Simon McVittie 2014-01-29 14:27:29 UTC
Created attachment 93005 [details] [review]
mc-tool: fix setting automatic presence

We were using the wrong finish-function.
Comment 1 Guillaume Desmottes 2014-01-29 16:02:23 UTC
Comment on attachment 93005 [details] [review]
mc-tool: fix setting automatic presence

Review of attachment 93005 [details] [review]:
-----------------------------------------------------------------

++
Comment 2 Simon McVittie 2014-01-29 19:44:35 UTC
Fixed in git for 5.16.2, 5.17.0


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.