mc-tool: fix setting automatic presence

We were using the wrong finish-function.

Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=74187